--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         //
         // 2. Taux de Valorisation Matières 2024 : 70 %
         //    - Formule : (Total Matières Valoriseés) / (Total Matières Valoriseés + DIB)
-        //    - Matières valorisées (2024) = Papier (0.0944) + Plastique (7.508) + Carton (1.694) = 9.2964 t
+        //    - Matières valorisées (2024) = Papier (0.0944) + Carton (7.508) + plastique (1.694) = 9.2964 t
         //    - Total matières gérées (2024) = Matières valorisées (9.2964) + DIB (4.224) = 13.5204 t
         //    - Calcul : 9.2964 / 13.5204 = 0.6875 soit ~70%.
         //    - Note : Les matières clients (Piles, D3E) sont exclues car elles relèvent d'un flux externe.
@@ -135,8 +135,8 @@
 
         const data = {
             papier: [0.0718, 0.1027, 0.0944],
-            plastique: [0, 0.843, 7.508],
-            carton: [0, 0.736, 1.694],
+            carton: [0, 0.843, 7.508],
+            plastique: [0, 0.736, 1.694],
             dib: [49500 * 0.0002, 36300 * 0.0002, 21120 * 0.0002], // Conversion en tonnes [9.9, 7.26, 4.224]
             casseEuro: [3026.15, 956.00, 1677.70],
             d3e: [0.094 + 0.08 + 0.07, 0 + 0.02 + 0.028, 0.234 + 0 + 0], // [0.244, 0.048, 0.234]
